parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ALPHABET ID EQUALS LBRACE alphabet_list RBRACE
Rule 2     alphabet_list -> ID
Rule 3     alphabet_list -> alphabet_list COMMA ID
Rule 4     statement -> STR ID EQUALS SINGLEQUOTE STRING SINGLEQUOTE
Rule 5     statement -> INITIAL COLON LBRACE ID RBRACE
Rule 6     statement -> FINAL COLON LBRACE final_list RBRACE
Rule 7     final_list -> ID
Rule 8     final_list -> final_list COMMA ID
Rule 9     statement -> STATES COLON LBRACE states_list RBRACE
Rule 10    states_list -> ID
Rule 11    states_list -> states_list COMMA ID
Rule 12    statement -> TRANSITIONS COLON LBRACE transitions_list RBRACE
Rule 13    transitions_list -> transition
Rule 14    transitions_list -> transitions_list COMMA transition
Rule 15    transition -> LSQUARE FROM COLON ID COMMA TO COLON ID COMMA ONN COLON ID RSQUARE
Rule 16    transition -> LSQUARE FROM COLON ID COMMA TO COLON ID COMMA ONN COLON ID COMMA POP COLON ID COMMA PUSH COLON ID COMMA STACK COLON ID RSQUARE
Rule 17    statement -> FA ID LPAREN RPAREN LBRACE statement_list_fa RBRACE
Rule 18    statement_list_fa -> statement
Rule 19    statement_list_fa -> statement_list_fa statement
Rule 20    statement -> PDA ID LPAREN RPAREN LBRACE statement_list_pda RBRACE
Rule 21    statement_list_pda -> statement
Rule 22    statement_list_pda -> statement_list_pda statement
Rule 23    statement -> STACK_INIT COLON ID
Rule 24    statement -> CFG ID LPAREN RPAREN LBRACE statement_list_cfg RBRACE
Rule 25    statement_list_cfg -> statement
Rule 26    statement_list_cfg -> statement_list_cfg statement
Rule 27    statement -> NONTERMINALS COLON LBRACE nonterminals_list RBRACE
Rule 28    nonterminals_list -> ID
Rule 29    nonterminals_list -> nonterminals_list COMMA ID
Rule 30    statement -> TERMINALS COLON LBRACE terminals_list RBRACE
Rule 31    terminals_list -> ID
Rule 32    terminals_list -> terminals_list COMMA ID
Rule 33    statement -> START COLON ID
Rule 34    statement -> RULES COLON LBRACE rules_list RBRACE
Rule 35    rules_list -> rule
Rule 36    rules_list -> rules_list rule
Rule 37    rule -> ID ARROW rule_rhs SEMICOLON
Rule 38    rule_rhs -> ID
Rule 39    rule_rhs -> rule_rhs PIPE ID
Rule 40    rule_rhs -> rule_rhs PIPE EPSILON
Rule 41    statement -> RE ID EQUALS SINGLEQUOTE REGEX SINGLEQUOTE
Rule 42    REGEX -> REGEX_CONTENT
Rule 43    REGEX_CONTENT -> REGEX_CONTENT REGEX_CHAR
Rule 44    REGEX_CONTENT -> REGEX_CHAR
Rule 45    REGEX_CHAR -> REGEX_SPECIAL_CHAR
Rule 46    REGEX_CHAR -> REGEX_LITERAL_CHAR
Rule 47    REGEX_SPECIAL_CHAR -> STAR
Rule 48    REGEX_SPECIAL_CHAR -> PLUS
Rule 49    REGEX_SPECIAL_CHAR -> OR
Rule 50    REGEX_SPECIAL_CHAR -> DOT
Rule 51    REGEX_SPECIAL_CHAR -> CARET
Rule 52    REGEX_SPECIAL_CHAR -> DOLLAR
Rule 53    REGEX_SPECIAL_CHAR -> QUESTION
Rule 54    REGEX_SPECIAL_CHAR -> LPAREN
Rule 55    REGEX_SPECIAL_CHAR -> RPAREN
Rule 56    REGEX_SPECIAL_CHAR -> LBRACE
Rule 57    REGEX_SPECIAL_CHAR -> RBRACE
Rule 58    statement -> MINIMIZE LPAREN ID RPAREN
Rule 59    statement -> SIMULATE LPAREN ID COMMA ID RPAREN
Rule 60    statement -> VISUALIZE LPAREN ID RPAREN
Rule 61    statement -> CONCAT LPAREN ID COMMA ID RPAREN
Rule 62    statement -> POWER LPAREN ID COMMA NUMBER RPAREN
Rule 63    statement -> KLEENE LPAREN ID RPAREN
Rule 64    statement -> CONVERT LPAREN ID COMMA ID RPAREN
Rule 65    statement -> CHECKPUMPINGLEMMAREG LPAREN ID RPAREN
Rule 66    statement -> CHECKPUMPINGLEMMACFL LPAREN ID RPAREN
Rule 67    statement -> ISEQUIVALENT LPAREN ID COMMA ID RPAREN
Rule 68    show_type -> YES
Rule 69    show_type -> NO
Rule 70    show_type -> REGULAR
Rule 71    show_type -> ISNOTREGULAR
Rule 72    show_type -> CFL
Rule 73    show_type -> ISNOTCFL
Rule 74    show_type -> ACCEPT
Rule 75    show_type -> REJECT
Rule 76    statement -> SHOW LPAREN show_type RPAREN
Rule 77    statement -> UNION LPAREN ID COMMA ID RPAREN
Rule 78    statement -> INTERSECT LPAREN ID COMMA ID RPAREN
Rule 79    statement -> COMPLEMENT LPAREN ID RPAREN
Rule 80    statement -> DIFF LPAREN ID COMMA ID RPAREN
Rule 81    statement -> ISDFA LPAREN ID RPAREN
Rule 82    statement -> ISNFA LPAREN ID RPAREN
Rule 83    statement -> ISDPDA LPAREN ID RPAREN
Rule 84    statement -> ISNPDA LPAREN ID RPAREN
Rule 85    statement -> IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
Rule 86    statement -> IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE IF LPAREN condition RPAREN LBRACE statement RBRACE
Rule 87    statement -> IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
Rule 88    statement -> IF LPAREN condition RPAREN LBRACE statement RBRACE
Rule 89    condition -> CHECKPUMPINGLEMMAREG
Rule 90    condition -> CHECKPUMPINGLEMMACFL
Rule 91    condition -> ISEQUIVALENT
Rule 92    condition -> ISDFA
Rule 93    condition -> ISNFA
Rule 94    condition -> ISDPDA
Rule 95    condition -> ISNPDA
Rule 96    statement -> SLCOMMENT
Rule 97    statement -> MLCOMMENT
Rule 98    statement -> DOCCOMMENT

Terminals, with rules where they appear

ACCEPT               : 74
ALPHABET             : 1
ARROW                : 37
CARET                : 51
CFG                  : 24
CFL                  : 72
CHECKPUMPINGLEMMACFL : 66 90
CHECKPUMPINGLEMMAREG : 65 89
COLON                : 5 6 9 12 15 15 15 16 16 16 16 16 16 23 27 30 33 34
COMMA                : 3 8 11 14 15 15 16 16 16 16 16 29 32 59 61 62 64 67 77 78 80
COMPLEMENT           : 79
CONCAT               : 61
CONVERT              : 64
DIFF                 : 80
DOCCOMMENT           : 98
DOLLAR               : 52
DOT                  : 50
ELSE                 : 85 86 87 87
EPSILON              : 40
EQUALS               : 1 4 41
FA                   : 17
FINAL                : 6
FROM                 : 15 16
ID                   : 1 2 3 4 5 7 8 10 11 15 15 15 16 16 16 16 16 16 17 20 23 24 28 29 31 32 33 37 38 39 41 58 59 59 60 61 61 62 63 64 64 65 66 67 67 77 77 78 78 79 80 80 81 82 83 84
IF                   : 85 86 86 87 87 88
INITIAL              : 5
INTERSECT            : 78
ISDFA                : 81 92
ISDPDA               : 83 94
ISEQUIVALENT         : 67 91
ISNFA                : 82 93
ISNOTCFL             : 73
ISNOTREGULAR         : 71
ISNPDA               : 84 95
KLEENE               : 63
LBRACE               : 1 5 6 9 12 17 20 24 27 30 34 56 85 85 86 86 87 87 87 88
LPAREN               : 17 20 24 54 58 59 60 61 62 63 64 65 66 67 76 77 78 79 80 81 82 83 84 85 86 86 87 87 88
LSQUARE              : 15 16
MINIMIZE             : 58
MLCOMMENT            : 97
NO                   : 69
NONTERMINALS         : 27
NUMBER               : 62
ONN                  : 15 16
OR                   : 49
PDA                  : 20
PIPE                 : 39 40
PLUS                 : 48
POP                  : 16
POWER                : 62
PUSH                 : 16
QUESTION             : 53
RBRACE               : 1 5 6 9 12 17 20 24 27 30 34 57 85 85 86 86 87 87 87 88
RE                   : 41
REGEX_LITERAL_CHAR   : 46
REGULAR              : 70
REJECT               : 75
RPAREN               : 17 20 24 55 58 59 60 61 62 63 64 65 66 67 76 77 78 79 80 81 82 83 84 85 86 86 87 87 88
RSQUARE              : 15 16
RULES                : 34
SEMICOLON            : 37
SHOW                 : 76
SIMULATE             : 59
SINGLEQUOTE          : 4 4 41 41
SLCOMMENT            : 96
STACK                : 16
STACK_INIT           : 23
STAR                 : 47
START                : 33
STATES               : 9
STR                  : 4
STRING               : 4
TERMINALS            : 30
TO                   : 15 16
TRANSITIONS          : 12
UNION                : 77
VISUALIZE            : 60
YES                  : 68
error                : 

Nonterminals, with rules where they appear

REGEX                : 41
REGEX_CHAR           : 43 44
REGEX_CONTENT        : 42 43
REGEX_SPECIAL_CHAR   : 45
alphabet_list        : 1 3
condition            : 85 86 86 87 87 88
final_list           : 6 8
nonterminals_list    : 27 29
rule                 : 35 36
rule_rhs             : 37 39 40
rules_list           : 34 36
show_type            : 76
statement            : 18 19 21 22 25 26 85 85 86 86 87 87 87 88 0
statement_list_cfg   : 24 26
statement_list_fa    : 17 19
statement_list_pda   : 20 22
states_list          : 9 11
terminals_list       : 30 32
transition           : 13 14
transitions_list     : 12 14

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ALPHABET ID EQUALS LBRACE alphabet_list RBRACE
    (4) statement -> . STR ID EQUALS SINGLEQUOTE STRING SINGLEQUOTE
    (5) statement -> . INITIAL COLON LBRACE ID RBRACE
    (6) statement -> . FINAL COLON LBRACE final_list RBRACE
    (9) statement -> . STATES COLON LBRACE states_list RBRACE
    (12) statement -> . TRANSITIONS COLON LBRACE transitions_list RBRACE
    (17) statement -> . FA ID LPAREN RPAREN LBRACE statement_list_fa RBRACE
    (20) statement -> . PDA ID LPAREN RPAREN LBRACE statement_list_pda RBRACE
    (23) statement -> . STACK_INIT COLON ID
    (24) statement -> . CFG ID LPAREN RPAREN LBRACE statement_list_cfg RBRACE
    (27) statement -> . NONTERMINALS COLON LBRACE nonterminals_list RBRACE
    (30) statement -> . TERMINALS COLON LBRACE terminals_list RBRACE
    (33) statement -> . START COLON ID
    (34) statement -> . RULES COLON LBRACE rules_list RBRACE
    (41) statement -> . RE ID EQUALS SINGLEQUOTE REGEX SINGLEQUOTE
    (58) statement -> . MINIMIZE LPAREN ID RPAREN
    (59) statement -> . SIMULATE LPAREN ID COMMA ID RPAREN
    (60) statement -> . VISUALIZE LPAREN ID RPAREN
    (61) statement -> . CONCAT LPAREN ID COMMA ID RPAREN
    (62) statement -> . POWER LPAREN ID COMMA NUMBER RPAREN
    (63) statement -> . KLEENE LPAREN ID RPAREN
    (64) statement -> . CONVERT LPAREN ID COMMA ID RPAREN
    (65) statement -> . CHECKPUMPINGLEMMAREG LPAREN ID RPAREN
    (66) statement -> . CHECKPUMPINGLEMMACFL LPAREN ID RPAREN
    (67) statement -> . ISEQUIVALENT LPAREN ID COMMA ID RPAREN
    (76) statement -> . SHOW LPAREN show_type RPAREN
    (77) statement -> . UNION LPAREN ID COMMA ID RPAREN
    (78) statement -> . INTERSECT LPAREN ID COMMA ID RPAREN
    (79) statement -> . COMPLEMENT LPAREN ID RPAREN
    (80) statement -> . DIFF LPAREN ID COMMA ID RPAREN
    (81) statement -> . ISDFA LPAREN ID RPAREN
    (82) statement -> . ISNFA LPAREN ID RPAREN
    (83) statement -> . ISDPDA LPAREN ID RPAREN
    (84) statement -> . ISNPDA LPAREN ID RPAREN
    (85) statement -> . IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
    (86) statement -> . IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE IF LPAREN condition RPAREN LBRACE statement RBRACE
    (87) statement -> . IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE IF LPAREN condition RPAREN LBRACE statement RBRACE ELSE LBRACE statement RBRACE
    (88) statement -> . IF LPAREN condition RPAREN LBRACE statement RBRACE
    (96) statement -> . SLCOMMENT
    (97) statement -> . MLCOMMENT
    (98) statement -> . DOCCOMMENT

    ALPHABET        shift and go to state 2
    STR             shift and go to state 3
    INITIAL         shift and go to state 4
    FINAL           shift and go to state 5
    STATES          shift and go to state 6
    TRANSITIONS     shift and go to state 7
    FA              shift and go to state 8
    PDA             shift and go to state 9
    STACK_INIT      shift and go to state 10
    CFG             shift and go to state 11
    NONTERMINALS    shift and go to state 12
    TERMINALS       shift and go to state 13
    START           shift and go to state 14
    RULES           shift and go to state 15
    RE              shift and go to state 16
    MINIMIZE        shift and go to state 17
    SIMULATE        shift and go to state 18
    VISUALIZE       shift and go to state 19
    CONCAT          shift and go to state 20
    POWER           shift and go to state 21
    KLEENE          shift and go to state 22
    CONVERT         shift and go to state 23
    CHECKPUMPINGLEMMAREG shift and go to state 24
    CHECKPUMPINGLEMMACFL shift and go to state 25
    ISEQUIVALENT    shift and go to state 26
    SHOW            shift and go to state 27
    UNION           shift and go to state 28
    INTERSECT       shift and go to state 29
    COMPLEMENT      shift and go to state 30
    DIFF            shift and go to state 31
    ISDFA           shift and go to state 32
    ISNFA           shift and go to state 33
    ISDPDA          shift and go to state 34
    ISNPDA          shift and go to state 35
    IF              shift and go to state 36
    SLCOMMENT       shift and go to state 37
    MLCOMMENT       shift and go to state 38
    DOCCOMMENT      shift and go to state 39

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> ALPHABET . ID EQUALS LBRACE alphabet_list RBRACE

    ID              shift and go to state 40


state 3

    (4) statement -> STR . ID EQUALS SINGLEQUOTE STRING SINGLEQUOTE

    ID              shift and go to state 41


state 4

    (5) statement -> INITIAL . COLON LBRACE ID RBRACE

    COLON           shift and go to state 42


state 5

    (6) statement -> FINAL . COLON LBRACE final_list RBRACE

    COLON           shift and go to state 43


state 6

    (9) statement -> STATES . COLON LBRACE states_list RBRACE

    COLON           shift and go to state 44


state 7

    (12) statement -> TRANSITIONS . COLON LBRACE transitions_list RBRACE

    COLON           shift and go to state 45


state 8

    (17) statement -> FA . ID LPAREN RPAREN LBRACE statement_list_fa RBRACE

    ID              shift and go to state 46


state 9

    (20) statement -> PDA . ID LPAREN RPAREN LBRACE statement_list_pda RBRACE

    ID              shift and go to state 47


state 10

    (23) statement -> STACK_INIT . COLON ID

    COLON           shift and go to state 48


state 11

    (24) statement -> CFG . ID LPAREN RPAREN LBRACE statement_list_cfg RBRACE

    ID              shift and go to state 49


state 12

    (27) statement -> NONTERMINALS . COLON LBRACE nonterminals_list RBRACE

    COLON           shift and go to state 50


state 13

    (30) statement -> TERMINALS . COLON LBRACE terminals_list RBRACE

    COLON           shift and go to state 51


state 14

    (33) statement -> START . COLON ID

    COLON           shift and go to state 52


state 15

    (34) statement -> RULES . COLON LBRACE rules_list RBRACE

    COLON           shift and go to state 53


state 16

    (41) statement -> RE . ID EQUALS SINGLEQUOTE REGEX SINGLEQUOTE

    ID              shift and go to state 54


state 17

    (58) statement -> MINIMIZE . LPAREN ID RPAREN

    LPAREN          shift and go to state 55


state 18

    (59) statement -> SIMULATE . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 56


state 19

    (60) statement -> VISUALIZE . LPAREN ID RPAREN

    LPAREN          shift and go to state 57


state 20

    (61) statement -> CONCAT . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 58


state 21

    (62) statement -> POWER . LPAREN ID COMMA NUMBER RPAREN

    LPAREN          shift and go to state 59


state 22

    (63) statement -> KLEENE . LPAREN ID RPAREN

    LPAREN          shift and go to state 60


state 23

    (64) statement -> CONVERT . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 61


state 24

    (65) statement -> CHECKPUMPINGLEMMAREG . LPAREN ID RPAREN

    LPAREN          shift and go to state 62


state 25

    (66) statement -> CHECKPUMPINGLEMMACFL . LPAREN ID RPAREN

    LPAREN          shift and go to state 63


state 26

    (67) statement -> ISEQUIVALENT . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 64


state 27

    (76) statement -> SHOW . LPAREN show_type RPAREN

    LPAREN          shift and go to state 65


state 28

    (77) statement -> UNION . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 66


state 29

    (78) statement -> INTERSECT . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 67


state 30

    (79) statement -> COMPLEMENT . LPAREN ID RPAREN

    LPAREN          shift and go to state 68


state 31

    (80) statement -> DIFF . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 69


state 32

    (81) statement -> ISDFA . LPAREN ID RPAREN

    LPAREN          shift and go to state 70


state 33

    (82) statement -> ISNFA . LPAREN ID RPAREN

    LPAREN          shift and go to state 71


state 34

    (83) statement -> ISDPDA . LPAREN ID RPAREN

    LPAREN          shift and go to state 72


state 35

    (84) statement -> ISNPDA . LPAREN ID RPAREN

    LPAREN          shift and go to state 73


state 36
